2008-02-06  Michael Smith <msmith@fluendo.com>

	* ext/theora/theoradec.c: (_theora_granule_frame),
	(_inc_granulepos):
	  Increment granulepos for new-bitstream versions appropriately.
	  Fixes #514623.

2008-02-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/examples/seek/seek.c: (do_seek),
	(rate_spinbutton_changed_cb), (update_streams), (main):
	Remove obsolete stream_time reset after flushing seek, core does that
	automatically now.
	Improve accuracy of speed spinbutton.
	Only do playbin2 stuff when we actually use it.

2008-02-02  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/Makefile.am:
	  Revert previous change of the test environment's GST_PLUGIN_PATH.
	  The problem is not with the plugins, but with element factories
	  and only occurs if elements are split out from existing plugins
	  or if plugins change name (see #512740).

2008-02-02  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/check/Makefile.am:
	  Fix the tests environment's GST_PLUGIN_PATH: we want the directory
	  with the core's plugins first and our local build directories last,
	  since we might be building against an installed core, and that
	  core's plugin directory may contain older or other versions of
	  our own -base plugins, but we really do want to test our local
	  ones (if there are multiple plugins or element factories with the
	  same name, those inspected last will trump those read in earlier).
	  Fixes #512740 for the most part.

2008-02-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	* gst-libs/gst/rtsp/gstrtspconnection.c: (add_date_header):
	Use gmtime_r if available as gmtime is not MT-safe.
	Fixes bug #511810.

2008-02-02  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/rtsp/gstrtspconnection.c: (add_date_header):
	Cast glong to time_t as time_t might have a different type on
	other platforms, like FreeBSD, and we get a compiler warning
	otherwise. Fixes bug #511825.
